src/objects/Glxy_LeaseAccrual__c.object
<CustomObject>
    <description>This table contains the Lease Accrual information. This information will be provided by BA53 users during the Lease Digest approval process for sending over to the REXUS application.</description>
    <fields>
        <fullName>Accrual_Amount__c</fullName>
        <inlineHelpText>Amount obligated for expected cost.</inlineHelpText>
        <label>Accrual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accrual_PDN_Key__c</fullName>
        <formula>IF( ISPICKVAL(Accrual_Type__c,&quot;Full&quot;),  PDN__c + TEXT(Accrual_Type__c ),&quot;&quot;)</formula>
        <label>Accrual PDN Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_Type__c</fullName>
        <inlineHelpText>Identifies accrual cost category (CPI, Real Estate Taxes, BID Taxes, Facilities Rental/Other, Settlement)</inlineHelpText>
        <label>Accrual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaseDigest__c</fullName>
        <label>Lease Digest</label>
        <referenceTo>Glxy_LeaseDigest__c</referenceTo>
        <relationshipLabel>Lease Accruals</relationshipLabel>
        <relationshipName>Lease_Accruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PDNKey__c</fullName>
        <label>PDNKey</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PDN__c</fullName>
        <inlineHelpText>Pegasys Document Number</inlineHelpText>
        <label>PDN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Lease Accrual</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Lease Accrual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accroual_Amount_not_Negative_OR_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Accrual_Amount__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Accrual Amount Cannot be Negative or Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Amount_is_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Accrual_Amount__c =0,$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Include_Accrual_is_set_on_Digest</fullName>
        <active>true</active>
        <description>Checks the include accrual is set on lease digest.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( LeaseDigest__r.Include_Accrual__c ,&quot;NO&quot;),ISPICKVAL( LeaseDigest__r.Include_Accrual__c,&quot;&quot;)),$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Cannot Add Lease Accruals, Include Accruals is not specified on parent Digest</errorMessage>
    </validationRules>
</CustomObject>